--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf build && webpack",
-    "start": "webpack-dev-server",
-    "dev": "webpack-dev-sever --hot --inline"
+    "start": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +14,12 @@
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
     "webpack": "^3.7.1",
     "webpack-dev-server": "^2.9.1"
   }
