--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^0.14.7",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^0.14.7",
+    "react-hot-loader": "^3.1.1",
     "react-router-dom": "^4.2.2"
   }
 }
