--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf build && webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --history-api-fallback --hot"
   },
   "keywords": [],
   "author": "",
