--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf build && webpack",
+    "build": "rm -rf build && NODE_ENV=production webpack -p",
     "start": "webpack-dev-server"
   },
   "keywords": [],
