--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf build && NODE_ENV=production webpack -p",
-    "start": "webpack-dev-server"
+    "build": "rm -rf build && webpack --config=webpack.config.prod.js",
+    "start": "webpack-dev-server --config=webpack.config.dev.js"
   },
   "keywords": [],
   "author": "",
@@ -19,9 +19,9 @@
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
+    "node-sass": "^4.4.0",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.0",
     "webpack": "^3.7.1",
     "webpack-dev-server": "^2.9.1"
   },
